@@ -281,10 +281,9 @@ class TestAPI(LinguaPloneTestCase):
         neutral_folder = makeContent(self.folder, 'SimpleFolder', 'neutral')
         neutral_folder.setLanguage('')
         neutral_doc = makeContent(neutral_folder, 'SimpleType', 'doc-neutral')
-        # TODO: We might want to change this. Adding content to a neutral
-        # folder should maybe default to being neutral, even if the site is
-        # not neutral by default
-        self.assertEquals(neutral_doc.defaultLanguage(), 'en')
+        # Adding content to a neutral folder defaults to it being neutral,
+        # even if the site is not neutral by default
+        self.assertEquals(neutral_doc.defaultLanguage(), '')
 
     def testDefaultLanguageNeutralSite(self):
         self.loginAsPortalOwner()
@@ -302,7 +301,7 @@ class TestAPI(LinguaPloneTestCase):
         neutral_folder = makeContent(self.folder, 'SimpleFolder', 'neutral')
         neutral_folder.setLanguage('')
         neutral_doc = makeContent(neutral_folder, 'SimpleType', 'doc-neutral')
-        self.assertEquals(neutral_doc.defaultLanguage(), 'en')
+        self.assertEquals(neutral_doc.defaultLanguage(), '')
 
     def testDefaultLanguageNoLanguageTool(self):
         neutral_folder = makeContent(self.folder, 'SimpleFolder', 'neutral')
